# cudaproject

./: .gitignore  CMakeLists.txt  PROJECT_CONTEXT.md  PROJECT_EXPLAINED.md  README.md  TALKING_POINTS.md  linkgeneration
backend/: main.py
cuda/: bindings.cpp  kernels.cu  kernels.cuh  rolling_zscore.cu  rolling_zscore_coalesced.cu  vector_add.cu
deploy/: start_demo.ps1
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  LiveMonitor.jsx
notebooks/: colab_dev.ipynb
python/: benchmark.py  cpu_baseline.py  generate_data.py  live_metrics.py  validate.py
